--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0",
-    "uniqid": "^5.3.0"
+    "uniqid": "^5.3.0",
+    "bem-react-component-creator": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
