--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "bem-react-component-creator": "^1.2.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
     "reactstrap": "^7.1.0",
-    "uniqid": "^5.3.0",
-    "bem-react-component-creator": "^1.2.0"
+    "uniqid": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
