--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "bem-react-component-creator": "^1.2.0",
     "bootstrap": "^4.3.1",
+    "prettier": "^2.3.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
