--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-scripts": "2.1.8",
-    "reactstrap": "^7.1.0",
+    "reactstrap": "8.9.0",
     "uniqid": "^5.3.0"
   },
   "scripts": {
