--- a/package.json
+++ b/package.json
@@ -6,17 +6,20 @@
     "@material-ui/core": "^4.11.4",
     "bem-react-component-creator": "^1.2.0",
     "bootstrap": "^4.3.1",
-    "prettier": "^2.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "2.1.8",
     "reactstrap": "8.9.0",
     "uniqid": "^5.3.0"
   },
+  "devDependencies": {
+    "prettier": "2.3.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "prettier": "prettier --write .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
