--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@testing-library/react": "^12.0.0",
     "bem-react-component-creator": "^1.2.0",
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.11.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "2.1.8",
@@ -13,12 +15,14 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
+    "enzyme-adapter-react-17-updated": "^1.0.2",
+    "jest": "23.6.0",
     "prettier": "2.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage",
     "prettier": "prettier --write .",
     "eject": "react-scripts eject"
   },
@@ -30,5 +34,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/test/setup.js"
+    ],
+    "globalSetup": "<rootDir>/test/setup-env.js",
+    "verbose": true
+  }
 }
