--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
-    "@testing-library/react": "^12.0.0",
     "bem-react-component-creator": "^1.2.0",
     "bootstrap": "^4.3.1",
     "enzyme": "^3.11.0",
@@ -15,6 +14,8 @@
     "uniqid": "^5.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "enzyme-adapter-react-17-updated": "^1.0.2",
     "jest": "23.6.0",
     "prettier": "2.3.2"
@@ -37,9 +38,31 @@
   ],
   "jest": {
     "setupFiles": [
-      "<rootDir>/test/setup.js"
+      "<rootDir>/test_setup/setup.js"
     ],
-    "globalSetup": "<rootDir>/test/setup-env.js",
-    "verbose": true
+    "testPathIgnorePatterns": [
+      "coverage",
+      "node_modules",
+      "test_setup"
+    ],
+    "globalSetup": "<rootDir>/test_setup/setup-env.js",
+    "testMatch": [
+      "<rootDir>/**/*.test.js"
+    ],
+    "verbose": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    },
+    "coverageReporters": [
+      "json",
+      "lcovonly",
+      "text",
+      "clover"
+    ]
   }
 }
